# ebay_prusa_scrapper

./: ebay_listings_20250213_173730.json  ebay_listings_20250213_173730_summary.json  pyproject.toml
.github/workflows/: daily-scrape.yml
public/data/: metadata.json
public/data/current/: listings.json
public/data/historical/2025/02/: listings_20250215.json  listings_20250216.json
src/ebay_prusa_scrapper/: main.py  old_main.py
src/ebay_prusa_scrapper/config/: constants.py  settings.py
src/ebay_prusa_scrapper/models/: listing.py  types.py
src/ebay_prusa_scrapper/scraper/: classifier.py  ebay_scraper.py  parser.py
src/ebay_prusa_scrapper/utils/: file_saving.py  json_handler.py  rate_limiter.py
